trunk/Source/include/OpenGL1x.hpp


extern PACKAGE bool GL_ARB_multisample;

extern PACKAGE bool GL_ARB_multitexture;

extern PACKAGE bool GL_EXT_blend_color;

extern PACKAGE bool GL_EXT_blend_minmax;

extern PACKAGE bool GL_EXT_copy_texture;

extern PACKAGE bool GL_EXT_draw_range_elements;

extern PACKAGE bool GL_EXT_texture3D;

extern PACKAGE Opengltokens::PFNGLBLENDCOLORPROC glBlendColor;

extern PACKAGE Opengltokens::PFNGLBLENDEQUATIONPROC glBlendEquation;

extern PACKAGE Opengltokens::PFNGLDRAWRANGEELEMENTSPROC glDrawRangeElements;

extern PACKAGE Opengltokens::PFNGLTEXIMAGE3DPROC glTexImage3D;

extern PACKAGE Opengltokens::PFNGLTEXSUBIMAGE3DPROC glTexSubImage3D;

extern PACKAGE Opengltokens::PFNGLCOPYTEXSUBIMAGE3DPROC glCopyTexSubImage3D;

extern PACKAGE Opengltokens::PFNGLCOLORTABLEPROC glColorTable;

extern PACKAGE Opengltokens::PFNGLCOLORTABLEPARAMETERFVPROC glColorTableParameterfv;

extern PACKAGE Opengltokens::PFNGLCOLORTABLEPARAMETERIVPROC glColorTableParameteriv;

extern PACKAGE Opengltokens::PFNGLCOPYCOLORTABLEPROC glCopyColorTable;

extern PACKAGE Opengltokens::PFNGLGETCOLORTABLEPROC glGetColorTable;

extern PACKAGE Opengltokens::PFNGLGETCOLORTABLEPARAMETERFVPROC glGetColorTableParameterfv;

extern PACKAGE Opengltokens::PFNGLGETCOLORTABLEPARAMETERIVPROC glGetColorTableParameteriv;

extern PACKAGE Opengltokens::PFNGLCOLORSUBTABLEPROC glColorSubTable;

extern PACKAGE Opengltokens::PFNGLCOPYCOLORSUBTABLEPROC glCopyColorSubTable;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONFILTER1DPROC glConvolutionFilter1D;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONFILTER2DPROC glConvolutionFilter2D;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONPARAMETERFPROC glConvolutionParameterf;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONPARAMETERFVPROC glConvolutionParameterfv;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONPARAMETERIPROC glConvolutionParameteri;

extern PACKAGE Opengltokens::PFNGLCONVOLUTIONPARAMETERIVPROC glConvolutionParameteriv;

extern PACKAGE Opengltokens::PFNGLCOPYCONVOLUTIONFILTER1DPROC glCopyConvolutionFilter1D;

extern PACKAGE Opengltokens::PFNGLCOPYCONVOLUTIONFILTER2DPROC glCopyConvolutionFilter2D;

extern PACKAGE Opengltokens::PFNGLGETCONVOLUTIONFILTERPROC glGetConvolutionFilter;

extern PACKAGE Opengltokens::PFNGLGETCONVOLUTIONPARAMETERFVPROC glGetConvolutionParameterfv;

extern PACKAGE Opengltokens::PFNGLGETCONVOLUTIONPARAMETERIVPROC glGetConvolutionParameteriv;

extern PACKAGE Opengltokens::PFNGLGETSEPARABLEFILTERPROC glGetSeparableFilter;

extern PACKAGE Opengltokens::PFNGLSEPARABLEFILTER2DPROC glSeparableFilter2D;

extern PACKAGE Opengltokens::PFNGLGETHISTOGRAMPROC glGetHistogram;

extern PACKAGE Opengltokens::PFNGLGETHISTOGRAMPARAMETERFVPROC glGetHistogramParameterfv;

extern PACKAGE Opengltokens::PFNGLGETHISTOGRAMPARAMETERIVPROC glGetHistogramParameteriv;

extern PACKAGE Opengltokens::PFNGLGETMINMAXPROC glGetMinmax;

extern PACKAGE Opengltokens::PFNGLGETMINMAXPARAMETERFVPROC glGetMinmaxParameterfv;

extern PACKAGE Opengltokens::PFNGLGETMINMAXPARAMETERIVPROC glGetMinmaxParameteriv;

extern PACKAGE Opengltokens::PFNGLHISTOGRAMPROC glHistogram;

extern PACKAGE Opengltokens::PFNGLMINMAXPROC glMinmax;

extern PACKAGE Opengltokens::PFNGLRESETHISTOGRAMPROC glResetHistogram;

extern PACKAGE Opengltokens::PFNGLRESETMINMAXPROC glResetMinmax;

extern PACKAGE Opengltokens::PFNGLACTIVETEXTUREPROC glActiveTexture;

extern PACKAGE Opengltokens::PFNGLSAMPLECOVERAGEPROC glSampleCoverage;